--- a/pieceofcake_html/css/style.css
+++ b/pieceofcake_html/css/style.css
@@ -1664,6 +1664,7 @@ hr {border-top: 2px dotted #cecece;}
 .form-control:focus,.textarea-field:focus,.input-field:focus {
    outline:0 none; 
    border:2px solid;
+   height: 25px;
 }
 
 textarea {
@@ -1673,10 +1674,14 @@ textarea {
 
 textarea.form-control:focus{outline:0 none;}
 
+/*Fixing IE & Firefox input text field bug*/
 input[type="email"], input[type="text"] {
-  box-sizing: border-box;
+  font-size: 16px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0 15px;
+  height: 42px;
 }
 
 
